[workspace]
members = [
	".",
	"proc-macro-definitions",
]

[package]
name = "fruit-salad"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Compare apples and oranges (and more). Trait object reference casting and trait object comparisons."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/fruit-salad"
homepage = "https://github.com/Tamschi/fruit-salad/tree/v0.0.1"
documentation = "https://docs.rs/fruit-salad/0.0.1"
keywords = ["pin", "trait", "object", "eq", "ord"]
categories = ["rust-patterns"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
resolver = "2"
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/fruit-salad" }
is-it-maintained-open-issues = { repository = "Tamschi/fruit-salad" }
maintenance = { status = "experimental" } # This may differ between branches.

[features]
default = ["std"]
std = []

[dependencies]
fruit-salad_proc-macro-definitions = { version = "0.0.1", path = "proc-macro-definitions", optional = true }

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
version-sync = "0.9.3"
wasm-bindgen-test = "0.3.28"
