[workspace]
members = [
	".",
	"proc-macro-definitions",
]

[package]
name = "fruit-salad"
version = "0.0.2"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Compare apples and oranges (and more). Trait object reference casting and trait object comparisons."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/fruit-salad"
homepage = "https://github.com/Tamschi/fruit-salad/tree/v0.0.2"
documentation = "https://docs.rs/fruit-salad/0.0.2"
keywords = ["pin", "trait", "object", "eq", "ord"]
categories = ["rust-patterns"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"COPYRIGHT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
resolver = "2"
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/fruit-salad" }
is-it-maintained-open-issues = { repository = "Tamschi/fruit-salad" }
maintenance = { status = "experimental" } # This may differ between branches.

[features]
alloc = []
default = ["std"]
macros = ["fruit-salad_proc-macro-definitions", "static_assertions"]
std = ["alloc"]

[dependencies]
fruit-salad_proc-macro-definitions = { version = "0.0.2", path = "proc-macro-definitions", optional = true }
static_assertions = { version = "1.1.0", optional = true }

[dev-dependencies]
cargo-husky = "1.5.0"
git_info = "0.1.2"
version-sync = "0.9.3"
wasm-bindgen-test = "0.3.28"

[package.metadata.docs.rs]
all-features = true
targets = [] # No differences.
